k8s/journal_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journal-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journal-app
  template:
    metadata:
      labels:
        app: journal-app
    spec:
      volumes:
        - name: static-files
          emptyDir: {}

      containers:
        - name: journal-app
          image: journal-app:latest
          imagePullPolicy: Never
          command: ["gunicorn"]
          args:
            ["journal.wsgi:application", "--bind", "0.0.0.0:8000"]
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: static-files
              mountPath: /app/staticfiles/
