k8s/journal_app_data.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journal-app-data
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journal-app-data
  template:
    metadata:
      labels:
        app: journal-app-data
    spec:
      containers:
        - name: journal-app-data
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: journal-app-data-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: journal-app-data-storage
          persistentVolumeClaim:
            claimName: journal-app-data-pvc
