k8s/journal_app_web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journal-app-web
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journal-app-web
  template:
    metadata:
      labels:
        app: journal-app-web
    spec:
      volumes:
        - name: static-files
          emptyDir: {}
        - name: nginx-config
          configMap:
            name: nginx-config
      containers:
        - name: journal-app-web
          image: eoinkyne/journal-app-web:0.0.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - name: static-files
              mountPath: /app/staticfiles/
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
          readinessProbe:
            httpGet:
              path: /health/
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health/
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
