k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: journal-app-data-headless
spec:
  clusterIP: None
  selector:
    app: journal-app-data
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: journal-app
  namespace: default
spec:
  selector:
    app: journal-app
  ports:
    - port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: journal-app-web
  namespace: default
spec:
  selector:
    app: journal-app-web
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
