k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: journal-app-ingress
  namespace: default
spec:
  rules:
    - host: simplememo.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
               name: journal-app-web
               port:
                 number: 80
